2005-01-10 Paolo Borelli <pborelli@katamail.com> 

	* libgnomevfs/gnome-vfs-handle.h: add GNOME_VFS_OPEN_TRUNCATE
	* modules/file-method.c: (do_open): add support for _TRUNCATE flag
	* modules/sftp-method.c: (do_open): add support for _TRUNCATE flag

2005-01-10  Christophe Fergeau  <teuf@gnome.org>

	* doc/tmpl/gnome-vfs-xfer.sgml: copied doc for
	GnomeVFSXferProgressCallback from gnome-vfs-xfer.h to the API doc

2005-01-09  Christian Kellner <gicmo@gnome.org>

	* configure.in:
	Define _GNU_SOURCE globally. This should fix bug #160052.
	* daemon/Makefile.am:
	* libgnomevfs/Makefile.am:
	* modules/Makefile.am:
	Remove -D_GNU_SOURCE that is now defined in config.h.

2005-01-09  Vincent Untz  <vincent@vuntz.net>

	* modules/default-modules.conf: remove vfolder methods
	Fix bug #160523

2005-01-08  Anders Carlsson  <andersca@localhost.localdomain>

	* libgnomevfs/gnome-vfs-mime-handlers.c 
	(gnome_vfs_mime_application_new_from_desktop_id): 
	The icon field name is "Icon", not "IconName".
	
2005-1-08  Paolo Borelli  <pborelli@katamail.com>

	* programs/gnomevfs-mv.c: added.

2005-1-08  Paolo Borelli  <pborelli@katamail.com>

	* modules/sftp-method.c (do_move): honour the force_replace flag.

2004-12-21  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.9.2 ===

2004-12-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2004-12-15  Alexander Larsson  <alexl@redhat.com>

	* modules/sftp-method.c (do_read):
	Don't break if we get an eof and there are outstanding
	requests.

2004-12-14  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c: fix build when HAL is
	disabled

2004-12-13  Marco Pesenti Gritti  <marco@gnome.org>

	* libgnomevfs/xdgmime.h:

	Sync

2004-12-13  Marco Pesenti Gritti  <marco@gnome.org>

	* libgnomevfs/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name):

	Resync

2004-12-12  Marco Pesenti Gritti <marco@gnome.org>
